--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
         "axios": "^0.21",
-        "bootstrap": "^5.1.3",
+        "bootstrap": "^5.2.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.17",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.54.8",
+        "sass": "^1.55.0",
         "sass-loader": "^11.0.1",
         "vue": "^2.7.10",
         "vue-loader": "^15.10.0",
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "bulma": "^0.9.4",
-        "vue-axios": "^3.4.1"
+        "vue-axios": "^3.4.1",
+        "vue-i18n": "^8.27.2"
     }
 }
