--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.55.0",
         "sass-loader": "^11.0.1",
-        "vue": "^2.7.10",
-        "vue-loader": "^15.10.0",
-        "vue-template-compiler": "^2.7.10"
+        "vue": "^3.2.36",
+        "vue-loader": "^17.0.0",
+        "vue-template-compiler": "^2.7.11"
     },
     "dependencies": {
         "bulma": "^0.9.4",
         "vue-axios": "^3.4.1",
-        "vue-i18n": "^8.27.2"
+        "vue-i18n": "^9.2.2",
+        "vue-router": "^4.1.5",
+        "vuex": "^4.0.2"
     }
 }
