--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,11 @@
     "/js/userLogin.js": "/js/userLogin.js",
     "/css/bulma.css": "/css/bulma.css",
     "/css/bootstrap.css": "/css/bootstrap.css",
-    "/css/userLogin.css": "/css/userLogin.css"
+    "/css/userLogin.css": "/css/userLogin.css",
+    "/images/background.png": "/images/background.png",
+    "/images/default/avatar_default.png": "/images/default/avatar_default.png",
+    "/images/default/brand.png": "/images/default/brand.png",
+    "/images/default/—Pngtree—japanese redhead sports boy avatar_6531253.png": "/images/default/—Pngtree—japanese redhead sports boy avatar_6531253.png",
+    "/images/default/—Pngtree—japanese social media girls wearing_6531254.png": "/images/default/—Pngtree—japanese social media girls wearing_6531254.png",
+    "/images/default/—Pngtree—japanese social media user avatar_6531265.png": "/images/default/—Pngtree—japanese social media user avatar_6531265.png"
 }
