--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,9 +6,15 @@
     "/css/bootstrap.css": "/css/bootstrap.css",
     "/css/userLogin.css": "/css/userLogin.css",
     "/images/background.png": "/images/background.png",
+    "/images/brand.png": "/images/brand.png",
     "/images/default/avatar_default.png": "/images/default/avatar_default.png",
+    "/images/default/brand .png": "/images/default/brand .png",
     "/images/default/brand.png": "/images/default/brand.png",
     "/images/default/—Pngtree—japanese redhead sports boy avatar_6531253.png": "/images/default/—Pngtree—japanese redhead sports boy avatar_6531253.png",
     "/images/default/—Pngtree—japanese social media girls wearing_6531254.png": "/images/default/—Pngtree—japanese social media girls wearing_6531254.png",
-    "/images/default/—Pngtree—japanese social media user avatar_6531265.png": "/images/default/—Pngtree—japanese social media user avatar_6531265.png"
+    "/images/default/—Pngtree—japanese social media user avatar_6531265.png": "/images/default/—Pngtree—japanese social media user avatar_6531265.png",
+    "/images/moon2.png": "/images/moon2.png",
+    "/images/default/clouds_repeat.png": "/images/default/clouds_repeat.png",
+    "/images/default/twinkling.png": "/images/default/twinkling.png",
+    "/images/default/stars.png": "/images/default/stars.png"
 }
