--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -10,11 +10,12 @@
     "/images/default/avatar_default.png": "/images/default/avatar_default.png",
     "/images/default/brand .png": "/images/default/brand .png",
     "/images/default/brand.png": "/images/default/brand.png",
+    "/images/default/clouds_repeat.png": "/images/default/clouds_repeat.png",
+    "/images/default/stars.png": "/images/default/stars.png",
+    "/images/default/twinkling.png": "/images/default/twinkling.png",
     "/images/default/—Pngtree—japanese redhead sports boy avatar_6531253.png": "/images/default/—Pngtree—japanese redhead sports boy avatar_6531253.png",
     "/images/default/—Pngtree—japanese social media girls wearing_6531254.png": "/images/default/—Pngtree—japanese social media girls wearing_6531254.png",
     "/images/default/—Pngtree—japanese social media user avatar_6531265.png": "/images/default/—Pngtree—japanese social media user avatar_6531265.png",
-    "/images/moon2.png": "/images/moon2.png",
-    "/images/default/clouds_repeat.png": "/images/default/clouds_repeat.png",
-    "/images/default/twinkling.png": "/images/default/twinkling.png",
-    "/images/default/stars.png": "/images/default/stars.png"
+    "/images/icon/arrow-right.png": "/images/icon/arrow-right.png",
+    "/images/moon2.png": "/images/moon2.png"
 }
