--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
         "@popperjs/core": "^2.10.2",
         "axios": "^0.21",
         "bootstrap": "^5.2.2",
+        "laravel-echo": "^1.14.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.17",
+        "pusher-js": "^7.4.0",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.55.0",
         "sass-loader": "^11.0.1",
