--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "vue-template-compiler": "^2.7.11"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^35.2.1",
+        "@ckeditor/ckeditor5-vue": "^4.0.1",
         "bulma": "^0.9.4",
         "vue-axios": "^3.4.1",
         "vue-i18n": "^9.2.2",
