--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
         "@ckeditor/ckeditor5-editor-classic": "^35.2.1",
         "@ckeditor/ckeditor5-vue": "^4.0.1",
         "bulma": "^0.9.4",
+        "js-cookie": "^3.0.1",
         "vue-axios": "^3.4.1",
         "vue-i18n": "^9.2.2",
         "vue-router": "^4.1.5",
+        "vue-toastification": "^2.0.0-rc.5",
         "vuex": "^4.0.2"
     }
 }
