--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -14,5 +14,6 @@
     "/images/default/—Pngtree—japanese redhead sports boy avatar_6531253.png": "/images/default/—Pngtree—japanese redhead sports boy avatar_6531253.png",
     "/images/default/—Pngtree—japanese social media girls wearing_6531254.png": "/images/default/—Pngtree—japanese social media girls wearing_6531254.png",
     "/images/default/—Pngtree—japanese social media user avatar_6531265.png": "/images/default/—Pngtree—japanese social media user avatar_6531265.png",
-    "/images/icon/arrow-right.png": "/images/icon/arrow-right.png"
+    "/images/icon/arrow-right.png": "/images/icon/arrow-right.png",
+    "/images/moon2.png": "/images/moon2.png"
 }
