--- a/package.json
+++ b/package.json
@@ -26,15 +26,32 @@
         "vue-template-compiler": "^2.7.11"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-autoformat": "^35.2.1",
+        "@ckeditor/ckeditor5-basic-styles": "^35.2.1",
+        "@ckeditor/ckeditor5-block-quote": "^35.2.1",
         "@ckeditor/ckeditor5-build-classic": "^35.2.1",
+        "@ckeditor/ckeditor5-dev-utils": "^31.1.5",
+        "@ckeditor/ckeditor5-dev-webpack-plugin": "^31.1.5",
         "@ckeditor/ckeditor5-editor-classic": "^35.2.1",
+        "@ckeditor/ckeditor5-heading": "^35.2.1",
+        "@ckeditor/ckeditor5-image": "^35.2.1",
+        "@ckeditor/ckeditor5-link": "^35.2.1",
+        "@ckeditor/ckeditor5-list": "^35.2.1",
+        "@ckeditor/ckeditor5-paragraph": "^35.2.1",
+        "@ckeditor/ckeditor5-theme-lark": "^35.2.1",
         "@ckeditor/ckeditor5-vue": "^4.0.1",
         "bulma": "^0.9.4",
+        "css-loader": "^5.2.7",
         "js-cookie": "^3.0.1",
+        "postcss-loader": "^4.3.0",
+        "raw-loader": "^4.0.2",
+        "style-loader": "^2.0.0",
         "vue-axios": "^3.4.1",
         "vue-i18n": "^9.2.2",
         "vue-router": "^4.1.5",
         "vue-toastification": "^2.0.0-rc.5",
-        "vuex": "^4.0.2"
+        "vuex": "^4.0.2",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0"
     }
 }
