--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -15,53 +15,5 @@
     "/images/default/—Pngtree—japanese social media girls wearing_6531254.png": "/images/default/—Pngtree—japanese social media girls wearing_6531254.png",
     "/images/default/—Pngtree—japanese social media user avatar_6531265.png": "/images/default/—Pngtree—japanese social media user avatar_6531265.png",
     "/images/icon/arrow-right.png": "/images/icon/arrow-right.png",
-    "/images/moon2.png": "/images/moon2.png",
-    "/images/vendor/@ckeditor/ckeditor5-basic-styles/theme/icons/italic.svg": "/images/vendor/@ckeditor/ckeditor5-basic-styles/theme/icons/italic.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/align-bottom.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/align-bottom.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/align-center.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/align-center.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/align-justify.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/align-justify.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/align-left.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/align-left.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/align-middle.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/align-middle.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/align-right.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/align-right.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/align-top.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/align-top.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/bold.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/bold.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/cancel.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/cancel.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/caption.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/caption.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/check.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/check.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/cog.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/cog.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/eraser.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/eraser.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/image.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/image.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/importexport.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/importexport.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/low-vision.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/low-vision.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-center.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-center.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-full-width.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-full-width.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-inline-left.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-inline-left.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-inline-right.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-inline-right.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-inline.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-inline.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-left.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-left.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-right.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-right.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-size-full.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-size-full.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-size-large.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-size-large.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-size-medium.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-size-medium.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-size-small.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/object-size-small.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/paragraph.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/paragraph.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/pencil.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/pencil.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/pilcrow.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/pilcrow.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/plus.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/plus.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/quote.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/quote.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/text.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/text.svg",
-    "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/three-vertical-dots.svg": "/images/vendor/@ckeditor/ckeditor5-core/theme/icons/three-vertical-dots.svg",
-    "/images/vendor/@ckeditor/ckeditor5-link/theme/icons/link.svg": "/images/vendor/@ckeditor/ckeditor5-link/theme/icons/link.svg",
-    "/images/vendor/@ckeditor/ckeditor5-link/theme/icons/unlink.svg": "/images/vendor/@ckeditor/ckeditor5-link/theme/icons/unlink.svg",
-    "/images/vendor/@ckeditor/ckeditor5-list/theme/icons/bulletedlist.svg": "/images/vendor/@ckeditor/ckeditor5-list/theme/icons/bulletedlist.svg",
-    "/images/vendor/@ckeditor/ckeditor5-list/theme/icons/numberedlist.svg": "/images/vendor/@ckeditor/ckeditor5-list/theme/icons/numberedlist.svg",
-    "/images/vendor/@ckeditor/ckeditor5-select-all/theme/icons/select-all.svg": "/images/vendor/@ckeditor/ckeditor5-select-all/theme/icons/select-all.svg",
-    "/images/vendor/@ckeditor/ckeditor5-ui/theme/icons/color-tile-check.svg": "/images/vendor/@ckeditor/ckeditor5-ui/theme/icons/color-tile-check.svg",
-    "/images/vendor/@ckeditor/ckeditor5-ui/theme/icons/dropdown-arrow.svg": "/images/vendor/@ckeditor/ckeditor5-ui/theme/icons/dropdown-arrow.svg",
-    "/images/vendor/@ckeditor/ckeditor5-ui/theme/icons/next-arrow.svg": "/images/vendor/@ckeditor/ckeditor5-ui/theme/icons/next-arrow.svg",
-    "/images/vendor/@ckeditor/ckeditor5-ui/theme/icons/previous-arrow.svg": "/images/vendor/@ckeditor/ckeditor5-ui/theme/icons/previous-arrow.svg",
-    "/images/vendor/@ckeditor/ckeditor5-undo/theme/icons/redo.svg": "/images/vendor/@ckeditor/ckeditor5-undo/theme/icons/redo.svg",
-    "/images/vendor/@ckeditor/ckeditor5-undo/theme/icons/undo.svg": "/images/vendor/@ckeditor/ckeditor5-undo/theme/icons/undo.svg",
-    "/images/vendor/@ckeditor/ckeditor5-widget/theme/icons/drag-handle.svg": "/images/vendor/@ckeditor/ckeditor5-widget/theme/icons/drag-handle.svg",
-    "/images/vendor/@ckeditor/ckeditor5-widget/theme/icons/return-arrow.svg": "/images/vendor/@ckeditor/ckeditor5-widget/theme/icons/return-arrow.svg"
+    "/images/moon2.png": "/images/moon2.png"
 }
