fix ui for login and create post

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -15,5 +15,8 @@
     "/images/default/—Pngtree—japanese social media girls wearing_6531254.png": "/images/default/—Pngtree—japanese social media girls wearing_6531254.png",
     "/images/default/—Pngtree—japanese social media user avatar_6531265.png": "/images/default/—Pngtree—japanese social media user avatar_6531265.png",
     "/images/icon/arrow-right.png": "/images/icon/arrow-right.png",
-    "/images/moon2.png": "/images/moon2.png"
+    "/images/moon2.png": "/images/moon2.png",
+    "/images/movies.jpg": "/images/movies.jpg",
+    "/images/movies2.jpg": "/images/movies2.jpg",
+    "/images/movies3.jpg": "/images/movies3.jpg"
 }
