--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "vue-template-compiler": "^2.7.11"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-vue": "^4.0.1",
         "bulma": "^0.9.4",
+        "canvas-confetti": "^1.6.0",
         "css-loader": "^5.2.7",
         "js-cookie": "^3.0.1",
         "postcss-loader": "^4.3.0",
