--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "canvas-confetti": "^1.6.0",
         "css-loader": "^5.2.7",
         "js-cookie": "^3.0.1",
+        "mitt": "^3.0.0",
         "postcss-loader": "^4.3.0",
         "raw-loader": "^4.0.2",
         "style-loader": "^2.0.0",
