--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "style-loader": "^2.0.0",
         "vue-i18n": "^9.2.2",
         "vue-router": "^4.1.5",
+        "vue-select": "^4.0.0-beta.6",
         "vue-toastification": "^2.0.0-rc.5",
         "vuex": "^4.0.2",
         "webpack": "^5.74.0",
