bug: could not broadcast

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "nwidart/laravel-modules": "^8.3",
-        "pusher/pusher-php-server": "~3.0"
+        "pusher/pusher-php-server": "7.0.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
