--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "@ckeditor/ckeditor5-vue": "^4.0.1",
         "bulma": "^0.9.4",
+        "bulma-quickview": "^2.0.0",
         "canvas-confetti": "^1.6.0",
         "css-loader": "^5.2.7",
         "js-cookie": "^3.0.1",
