--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "postcss-loader": "^4.3.0",
         "raw-loader": "^4.0.2",
         "style-loader": "^2.0.0",
+        "vue-easy-lightbox": "^1.12.0",
         "vue-i18n": "^9.2.2",
         "vue-router": "^4.1.5",
         "vue-select": "^4.0.0-beta.6",
