--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "mitt": "^3.0.0",
         "postcss-loader": "^4.3.0",
         "raw-loader": "^4.0.2",
+        "simple-peer": "^9.11.1",
         "style-loader": "^2.0.0",
         "vue-easy-lightbox": "^1.12.0",
         "vue-i18n": "^9.2.2",
