--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "@ckeditor/ckeditor5-vue": "^4.0.1",
+        "@vuepic/vue-datepicker": "^3.6.8",
         "bulma": "^0.9.4",
         "bulma-quickview": "^2.0.0",
         "canvas-confetti": "^1.6.0",
@@ -37,11 +38,13 @@
         "raw-loader": "^4.0.2",
         "simple-peer": "^9.11.1",
         "style-loader": "^2.0.0",
+        "tiny-date-picker": "^4.0.0-beta6",
         "vue-easy-lightbox": "^1.12.0",
         "vue-i18n": "^9.2.2",
         "vue-router": "^4.1.5",
         "vue-select": "^4.0.0-beta.6",
         "vue-toastification": "^2.0.0-rc.5",
+        "vue3-moveable": "^0.18.1",
         "vuex": "^4.0.2",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0"
