--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,19 +1,49 @@
 {
     "/vue/js/app.js": "/vue/js/app.js",
     "/js/bootstrap.js": "/js/bootstrap.js",
-    "/js/userLogin.js": "/js/userLogin.js",
+    "/js/userAuth.js": "/js/userAuth.js",
+    "/js/particles.js": "/js/particles.js",
+    "/js/accountSetting.js": "/js/accountSetting.js",
+    "/css/common.css": "/css/common.css",
     "/css/bulma.css": "/css/bulma.css",
     "/css/bootstrap.css": "/css/bootstrap.css",
-    "/css/userLogin.css": "/css/userLogin.css",
-    "/css/common.css": "/css/common.css",
-    "/images/default/avatar_default.png": "/images/default/avatar_default.png",
-    "/images/default/brand.png": "/images/default/brand.png",
-    "/images/default/clouds_repeat.png": "/images/default/clouds_repeat.png",
-    "/images/default/stars.png": "/images/default/stars.png",
-    "/images/default/twinkling.png": "/images/default/twinkling.png",
-    "/images/default/—Pngtree—japanese redhead sports boy avatar_6531253.png": "/images/default/—Pngtree—japanese redhead sports boy avatar_6531253.png",
-    "/images/default/—Pngtree—japanese social media girls wearing_6531254.png": "/images/default/—Pngtree—japanese social media girls wearing_6531254.png",
-    "/images/default/—Pngtree—japanese social media user avatar_6531265.png": "/images/default/—Pngtree—japanese social media user avatar_6531265.png",
+    "/css/userAuth.css": "/css/userAuth.css",
+    "/css/accountSetting.css": "/css/accountSetting.css",
+    "/images/alone_stitch.gif": "/images/alone_stitch.gif",
+    "/images/background.png": "/images/background.png",
+    "/images/brand.png": "/images/brand.png",
+    "/images/chat.png": "/images/chat.png",
+    "/images/defaults/avatars/—Pngtree—japanese redhead sports boy avatar_6531253.png": "/images/defaults/avatars/—Pngtree—japanese redhead sports boy avatar_6531253.png",
+    "/images/defaults/avatars/—Pngtree—japanese social media girls wearing_6531254.png": "/images/defaults/avatars/—Pngtree—japanese social media girls wearing_6531254.png",
+    "/images/defaults/avatars/—Pngtree—japanese social media user avatar_6531265.png": "/images/defaults/avatars/—Pngtree—japanese social media user avatar_6531265.png",
+    "/images/defaults/avatars/—Pngtree—japanese sports male social media_6531262.png": "/images/defaults/avatars/—Pngtree—japanese sports male social media_6531262.png",
+    "/images/defaults/background/background.png": "/images/defaults/background/background.png",
+    "/images/defaults/background.png": "/images/defaults/background.png",
+    "/images/defaults/brand.png": "/images/defaults/brand.png",
+    "/images/defaults/chat.png": "/images/defaults/chat.png",
+    "/images/defaults/community/background.png": "/images/defaults/community/background.png",
+    "/images/defaults/community/community_avatar.png": "/images/defaults/community/community_avatar.png",
+    "/images/defaults/tick_image.png": "/images/defaults/tick_image.png",
+    "/images/defaults/universe.jpg": "/images/defaults/universe.jpg",
+    "/images/gifs/alone_stitch.gif": "/images/gifs/alone_stitch.gif",
+    "/images/gifs/not_found.gif": "/images/gifs/not_found.gif",
+    "/images/gifs/sad_stitch.gif": "/images/gifs/sad_stitch.gif",
+    "/images/gifs/waving_stitch.gif": "/images/gifs/waving_stitch.gif",
     "/images/icon/arrow-right.png": "/images/icon/arrow-right.png",
-    "/images/moon2.png": "/images/moon2.png"
+    "/images/not_found.gif": "/images/not_found.gif",
+    "/images/sad_stitch.gif": "/images/sad_stitch.gif",
+    "/images/universe.jpg": "/images/universe.jpg",
+    "/images/waving_stitch.gif": "/images/waving_stitch.gif",
+    "/storage/app/public/defaults/avatars/—Pngtree—japanese redhead sports boy avatar_6531253.png": "/storage/app/public/defaults/avatars/—Pngtree—japanese redhead sports boy avatar_6531253.png",
+    "/storage/app/public/defaults/avatars/—Pngtree—japanese social media girls wearing_6531254.png": "/storage/app/public/defaults/avatars/—Pngtree—japanese social media girls wearing_6531254.png",
+    "/storage/app/public/defaults/avatars/—Pngtree—japanese social media user avatar_6531265.png": "/storage/app/public/defaults/avatars/—Pngtree—japanese social media user avatar_6531265.png",
+    "/storage/app/public/defaults/avatars/—Pngtree—japanese sports male social media_6531262.png": "/storage/app/public/defaults/avatars/—Pngtree—japanese sports male social media_6531262.png",
+    "/storage/app/public/defaults/background/background.png": "/storage/app/public/defaults/background/background.png",
+    "/storage/app/public/defaults/background.png": "/storage/app/public/defaults/background.png",
+    "/storage/app/public/defaults/brand.png": "/storage/app/public/defaults/brand.png",
+    "/storage/app/public/defaults/chat.png": "/storage/app/public/defaults/chat.png",
+    "/storage/app/public/defaults/community/background.png": "/storage/app/public/defaults/community/background.png",
+    "/storage/app/public/defaults/community/community_avatar.png": "/storage/app/public/defaults/community/community_avatar.png",
+    "/storage/app/public/defaults/tick_image.png": "/storage/app/public/defaults/tick_image.png",
+    "/storage/app/public/defaults/universe.jpg": "/storage/app/public/defaults/universe.jpg"
 }
